# SistemaRiegoAutomatizado

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GUI_Riego_Automatizado.html  README.md  main.cpp
data/: climate_ica_2024_sample.csv  crops_peru.json
src/algorithms/: dp_irrigation.h  greedy_irrigation.h
src/models/: irrigation_zone.h
src/sensors/: sensor_simulation.h
tests/: test_benchmark.cpp  test_large.cpp  test_medium.cpp  test_small.cpp
